--- a/freezer.html
+++ b/freezer.html
@@ -120,51 +120,51 @@
 
     <div class="catalog">
         <div class="catalog__container">
-            <h2>FREEZERS</h2>
+            <h2>CHEST FREEZERS</h2>
             <ul class="catalog__list">
-                <li class="catalog__item">
-                    <a href="catalog/freezer/FW-CFR251.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Chest Freezer <br>FW-CFR251</p>
-                    </div>
-                    </a>
-                </li>
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/freezer/FW-CFR251.html">-->
+<!--                    <div class="catalog__item-img-container">-->
+<!--                        <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">-->
+<!--                    </div>-->
+<!--                    <div class="catalog__item-description">-->
+<!--                        <p>FW-CFR251</p>-->
+<!--                    </div>-->
+<!--                    </a>-->
+<!--                </li>-->
 
-                <li class="catalog__item">
-                    <a href="catalog/freezer/FW-CFR211.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Chest Freezer <br>FW-CFR211</p>
-                    </div>
-                    </a>
-                </li>
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/freezer/FW-CFR211.html">-->
+<!--                    <div class="catalog__item-img-container">-->
+<!--                        <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">-->
+<!--                    </div>-->
+<!--                    <div class="catalog__item-description">-->
+<!--                        <p>FW-CFR211</p>-->
+<!--                    </div>-->
+<!--                    </a>-->
+<!--                </li>-->
 
-                <li class="catalog__item">
-                    <a href="catalog/freezer/FW-CFR181.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Chest Freezer <br>FW-CFR181</p>
-                    </div>
-                    </a>
-                </li>
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/freezer/FW-CFR181.html">-->
+<!--                    <div class="catalog__item-img-container">-->
+<!--                        <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">-->
+<!--                    </div>-->
+<!--                    <div class="catalog__item-description">-->
+<!--                        <p>FW-CFR181</p>-->
+<!--                    </div>-->
+<!--                    </a>-->
+<!--                </li>-->
 
-                <li class="catalog__item">
-                    <a href="catalog/freezer/FW-CFR141.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Chest Freezer <br>FW-CFR141</p>
-                    </div>
-                    </a>
-                </li>
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/freezer/FW-CFR141.html">-->
+<!--                    <div class="catalog__item-img-container">-->
+<!--                        <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">-->
+<!--                    </div>-->
+<!--                    <div class="catalog__item-description">-->
+<!--                        <p>FW-CFR141</p>-->
+<!--                    </div>-->
+<!--                    </a>-->
+<!--                </li>-->
 
                 <li class="catalog__item">
                     <a href="catalog/freezer/FW-CFR101.html">
@@ -172,7 +172,7 @@
                         <img src="assets/img/freezer/FW-CFR251-211-181-141-101.png">
                     </div>
                     <div class="catalog__item-description">
-                        <p>Chest Freezer <br>FW-CFR101</p>
+                        <p>FW-CFR101</p>
                     </div>
                     </a>
                 </li>
@@ -183,7 +183,7 @@
                         <img src="assets/img/freezer/FW-CFR071-051-041.png">
                     </div>
                     <div class="catalog__item-description">
-                        <p>Chest Freezer <br>FW-CFR071</p>
+                        <p>FW-CFR071</p>
                     </div>
                     </a>
                 </li>
@@ -194,21 +194,21 @@
                         <img src="assets/img/freezer/FW-CFR071-051-041.png">
                     </div>
                     <div class="catalog__item-description">
-                        <p>Chest Freezer <br>FW-CFR051</p>
+                        <p>FW-CFR051</p>
                     </div>
                     </a>
                 </li>
 
-                <li class="catalog__item">
-                    <a href="catalog/freezer/FW-CFR041.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-CFR071-051-041.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Chest Freezer <br>FW-CFR041</p>
-                    </div>
-                    </a>
-                </li>
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/freezer/FW-CFR041.html">-->
+<!--                    <div class="catalog__item-img-container">-->
+<!--                        <img src="assets/img/freezer/FW-CFR071-051-041.png">-->
+<!--                    </div>-->
+<!--                    <div class="catalog__item-description">-->
+<!--                        <p>FW-CFR041</p>-->
+<!--                    </div>-->
+<!--                    </a>-->
+<!--                </li>-->
 
                 <li class="catalog__item">
                     <a href="catalog/freezer/FW-CFR031.html">
@@ -216,120 +216,147 @@
                         <img src="assets/img/freezer/FW-CFR031.png">
                     </div>
                     <div class="catalog__item-description">
-                        <p>Chest Freezer <br>FW-CFR031</p>
+                        <p>FW-CFR031</p>
                     </div>
                     </a>
                 </li>
 
-                <li class="catalog__item">
-                    <a href="catalog/freezer/FW-UFR211.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-UFR211.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Upright Freezer <br>FW-UFR211</p>
-                    </div>
-                    </a>
-                </li>
 
-                <li class="catalog__item">
-                    <a href="catalog/freezer/FW-UFR171.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-UFR171.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Upright Freezer <br>FW-UFR171</p>
-                    </div>
-                    </a>
-                </li>
+            </ul>
+            <h2>UPRIGHT FREEZERS</h2>
+            <ul class="catalog__list">
 
-                <li class="catalog__item">
-                    <a href="catalog/freezer/FW-UFR141.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-UFR141.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Upright Freezer <br>FW-UFR141</p>
-                    </div>
-                    </a>
-                </li>
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/freezer/FW-UFR211.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/freezer/FW-UFR211.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-UFR211</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
 
-                <li class="catalog__item">
-                    <a href="catalog/freezer/FW-UFR101.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-UFR101.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Upright Freezer <br>FW-UFR101</p>
-                    </div>
-                    </a>
-                </li>
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/freezer/FW-UFR171.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/freezer/FW-UFR171.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-UFR171</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
 
-                <li class="catalog__item">
-                    <a href="catalog/freezer/FW-UFR161.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-UFR161.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Upright Freezer <br>FW-UFR161</p>
-                    </div>
-                    </a>
-                </li>
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/freezer/FW-UFR141.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/freezer/FW-UFR141.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-UFR141</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
+
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/freezer/FW-UFR101.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/freezer/FW-UFR101.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-UFR101</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
+
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/freezer/FW-UFR161.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/freezer/FW-UFR161.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-UFR161</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
 
                 <li class="catalog__item">
                     <a href="catalog/freezer/FW-UFR111.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-UFR111.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Upright Freezer <br>FW-UFR111</p>
-                    </div>
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/freezer/FW-UFR111.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-UFR111</p>
+                        </div>
                     </a>
                 </li>
 
                 <li class="catalog__item">
                     <a href="catalog/freezer/FW-UFR861.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-UFR861.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Upright Freezer <br>FW-UFR861</p>
-                    </div>
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/freezer/FW-UFR861.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-UFR861</p>
+                        </div>
                     </a>
                 </li>
 
                 <li class="catalog__item">
                     <a href="catalog/freezer/FW-UFR681.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-UFR681.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Upright Freezer <br>FW-UFR681</p>
-                    </div>
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/freezer/FW-UFR681.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-UFR681</p>
+                        </div>
                     </a>
                 </li>
 
                 <li class="catalog__item">
                     <a href="catalog/freezer/FW-UFR151.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-UFR151.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Upright Freezer <br>FW-UFR151</p>
-                    </div>
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/freezer/FW-UFR151.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-UFR151</p>
+                        </div>
                     </a>
                 </li>
 
                 <li class="catalog__item">
-                    <a href="catalog/freezer/FW-UFR341.html">
-                    <div class="catalog__item-img-container">
-                        <img src="assets/img/freezer/FW-UFR341.png">
-                    </div>
-                    <div class="catalog__item-description">
-                        <p>Upright Freezer <br>FW-UFR341</p>
-                    </div>
+                    <a href="catalog/freezer/FW-UFR131.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/freezer/FW-UFR131.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-UFR131</p>
+                        </div>
                     </a>
                 </li>
+
+                <li class="catalog__item">
+                    <a href="catalog/freezer/FW-UFR121.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/freezer/FW-UFR121.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-UFR121</p>
+                        </div>
+                    </a>
+                </li>
+
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/freezer/FW-UFR341.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/freezer/FW-UFR341.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-UFR341</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
 
             </ul>
         </div>
@@ -360,9 +387,6 @@
             </li>
         </ul>
         <div class="footer__copyright">
-            <p>Copyright © 2024 Farberware Cookware.</p>
-            <p>*Voted most trusted Cookware brand by American shoppers based on the 2022 BrandSpark® American Trust
-                Study.</p>
         </div>
         <ul class="footer__socials">
             <li class="footer__socials-item">
