--- a/fridge.html
+++ b/fridge.html
@@ -124,18 +124,49 @@
 
     <div class="catalog">
         <div class="catalog__container">
-            <h2>FRIDGES</h2>
+            <h2>TOP MOUNT REFRIGERATORS</h2>
             <ul class="catalog__list">
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/fridge/FW-TRF782.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/fridge/FW-TRF782.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-TRF782</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
 
+                <li class="catalog__item">
+                    <a href="catalog/fridge/FW-TRF272.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/fridge/FW-TRF272.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-TRF272</p>
+                        </div>
+                    </a>
+                </li>
+
+                <li class="catalog__item">
+                    <a href="catalog/fridge/FW-TSD105.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/fridge/FW-TSD105.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-TSD105</p>
+                        </div>
+                    </a>
+                </li>
 
 
                 <li class="catalog__item">
-                    <a href="catalog/fridge/FW-TRF782.html">
+                    <a href="catalog/fridge/FW-TRF362.html">
                         <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-TRF782.png">
+                            <img src="assets/img/fridge/FW-TRF362.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Top Mount Refrigerator <br>FW-TRF782</p>
+                            <p>FW-TRF362</p>
                         </div>
                     </a>
                 </li>
@@ -146,21 +177,14 @@
                             <img src="assets/img/fridge/FW-TSD102.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Refrigerator With Water Dispenser <br>FW-TSD102</p>
+                            <p>FW-TSD102</p>
                         </div>
                     </a>
                 </li>
 
-                <li class="catalog__item">
-                    <a href="catalog/fridge/FW-TRF362.html">
-                        <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-TRF362.png">
-                        </div>
-                        <div class="catalog__item-description">
-                            <p>Single Door Refrigerator <br>FW-TRF362</p>
-                        </div>
-                    </a>
-                </li>
+            </ul>
+            <h2>COMPACT REFRIGERATORS</h2>
+            <ul class="catalog__list">
 
                 <li class="catalog__item">
                     <a href="catalog/fridge/FW-CRF422.html">
@@ -168,56 +192,139 @@
                             <img src="assets/img/fridge/FW-CRF422.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Double Door Compact Refrigerator <br>FW-CRF422</p>
+                            <p>FW-CRF422</p>
                         </div>
                     </a>
                 </li>
 
                 <li class="catalog__item">
-                    <a href="catalog/fridge/FW-CRF161.html">
+                    <a href="catalog/fridge/FW-CRF132.html">
                         <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-CRF161.png">
+                            <img src="assets/img/fridge/FW-CRF132.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Double Door Compact Refrigerator <br>FW-CRF161</p>
+                            <p>FW-CRF132</p>
                         </div>
                     </a>
                 </li>
 
                 <li class="catalog__item">
-                    <a href="catalog/fridge/FW-CRF131.html">
+                    <a href="catalog/fridge/FW-CRF042.html">
                         <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-CRF131.png">
+                            <img src="assets/img/fridge/FW-CRF042.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Compact Refrigerator <br>FW-CRF131</p>
+                            <p>FW-CRF042</p>
                         </div>
                     </a>
                 </li>
 
                 <li class="catalog__item">
-                    <a href="catalog/fridge/FW-CRF351.html">
+                    <a href="catalog/fridge/FW-CRF032.html">
                         <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-CRF351.png">
+                            <img src="assets/img/fridge/FW-CRF032.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Compact Refrigerator <br>FW-CRF351</p>
+                            <p>FW-CRF032</p>
                         </div>
                     </a>
                 </li>
 
                 <li class="catalog__item">
-                    <a href="catalog/fridge/FW-CRF251.html">
+                    <a href="catalog/fridge/FW-CRF002.html">
                         <div class="catalog__item-img-container">
-                            <img src="assets/img/fridge/FW-CRF251.png">
+                            <img src="assets/img/fridge/FW-CRF002.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Compact Refrigerator <br>FW-CRF251</p>
+                            <p>FW-CRF002</p>
+                        </div>
+                    </a>
+                </li>
+
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/fridge/FW-CRF161.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/fridge/FW-CRF161.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-CRF161</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
+
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/fridge/FW-CRF131.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/fridge/FW-CRF131.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-CRF131</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
+
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/fridge/FW-CRF351.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/fridge/FW-CRF351.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-CRF351</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
+
+<!--                <li class="catalog__item">-->
+<!--                    <a href="catalog/fridge/FW-CRF251.html">-->
+<!--                        <div class="catalog__item-img-container">-->
+<!--                            <img src="assets/img/fridge/FW-CRF251.png">-->
+<!--                        </div>-->
+<!--                        <div class="catalog__item-description">-->
+<!--                            <p>FW-CRF251</p>-->
+<!--                        </div>-->
+<!--                    </a>-->
+<!--                </li>-->
+
+            </ul>
+
+            <h2>RETRO STYLE REFRIGERATORS</h2>
+            <ul class="catalog__list">
+
+                <li class="catalog__item">
+                    <a href="catalog/fridge/FW-CRF725.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/fridge/FW-CRF725.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-CRF725</p>
+                        </div>
+                    </a>
+                </li>
+
+                <li class="catalog__item">
+                    <a href="catalog/fridge/FW-CRF725-2.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/fridge/FW-CRF725-2.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-CRF725-2</p>
+                        </div>
+                    </a>
+                </li>
+
+                <li class="catalog__item">
+                    <a href="catalog/fridge/FW-CRF725-3.html">
+                        <div class="catalog__item-img-container">
+                            <img src="assets/img/fridge/FW-CRF725-3.png">
+                        </div>
+                        <div class="catalog__item-description">
+                            <p>FW-CRF725-3</p>
                         </div>
                     </a>
                 </li>
 
             </ul>
+
         </div>
     </div>
 
@@ -246,9 +353,6 @@
             </li>
         </ul>
         <div class="footer__copyright">
-            <p>Copyright © 2024 Farberware Cookware.</p>
-            <p>*Voted most trusted Cookware brand by American shoppers based on the 2022 BrandSpark® American Trust
-                Study.</p>
         </div>
         <ul class="footer__socials">
             <li class="footer__socials-item">
