--- a/ice.html
+++ b/ice.html
@@ -124,7 +124,7 @@
 
     <div class="catalog">
         <div class="catalog__container">
-            <h2>ICE MAKERS</h2>
+            <h2>PORTABLE ICE MAKERS</h2>
             <ul class="catalog__list">
                 <li class="catalog__item">
                     <a href="catalog/ice/FW-IM818.html">
@@ -132,7 +132,7 @@
                             <img src="assets/img/ice/FW-IM818.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Portable Ice Maker <br>FW-IM818</p>
+                            <p>FW-IM818</p>
                         </div>
                     </a>
                 </li>
@@ -143,7 +143,7 @@
                             <img src="assets/img/ice/FW-IM270.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Portable Ice Maker <br>FW-IM270</p>
+                            <p>FW-IM270</p>
                         </div>
                     </a>
                 </li>
@@ -154,7 +154,7 @@
                             <img src="assets/img/ice/FW-IM711.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Portable Ice Maker <br>FW-IM711</p>
+                            <p>FW-IM711</p>
                         </div>
                     </a>
                 </li>
@@ -188,9 +188,6 @@
             </li>
         </ul>
         <div class="footer__copyright">
-            <p>Copyright © 2024 Farberware Cookware.</p>
-            <p>*Voted most trusted Cookware brand by American shoppers based on the 2022 BrandSpark® American Trust
-                Study.</p>
         </div>
         <ul class="footer__socials">
             <li class="footer__socials-item">
