--- a/index.html
+++ b/index.html
@@ -253,10 +253,8 @@
             <div class="about-brand__content">
                 <img src="assets/img/about-brand.jpg">
                 <div class="about-brand__content-info">
-                    <p>We bring convenience, dependability, and value to America’s busy kitchens. It's a Farberware
-                        tradition we
-                        trace back to 1900 when S.W. </p>
-                    <a href="#" class="button about-brand__button">Learn more</a>
+                    <p>Farberware is dedicated to enhancing daily life with a diverse range of innovative products, from fridges to water dispensers and ice makers. Our commitment to customer satisfaction drives us to meticulously craft designs that address their needs, ensuring every product adds significant value to your home.</p>
+                    <a href="about.html" class="button about-brand__button">Learn more</a>
                 </div>
             </div>
         </div>
@@ -284,9 +282,6 @@
             </li>
         </ul>
         <div class="footer__copyright">
-            <p>Copyright © 2024 Farberware Cookware.</p>
-            <p>*Voted most trusted Cookware brand by American shoppers based on the 2022 BrandSpark® American Trust
-                Study.</p>
         </div>
         <ul class="footer__socials">
             <li class="footer__socials-item">
