--- a/water.html
+++ b/water.html
@@ -124,7 +124,7 @@
 
     <div class="catalog">
         <div class="catalog__container">
-            <h2>WATER DISPENSERS</h2>
+            <h2>TOP LOADING WATER DISPENSERS</h2>
             <ul class="catalog__list">
                 <li class="catalog__item">
                     <a href="catalog/water/FW-WD129.html">
@@ -132,7 +132,7 @@
                             <img src="assets/img/water/FW-WD129.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Top Loading Water Dispenser With Ice Maker <br>FW-WD129</p>
+                            <p>FW-WD129</p>
                         </div>
                     </a>
                 </li>
@@ -143,7 +143,7 @@
                             <img src="assets/img/water/PS-WD988.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Top Loading Water Dispenser <br>PS-WD988</p>
+                            <p>PS-WD988</p>
                         </div>
                     </a>
                 </li>
@@ -154,7 +154,7 @@
                             <img src="assets/img/water/PS-WD487.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Glass Door Top Loading Water Dispenser <br>PS-WD487</p>
+                            <p>PS-WD487</p>
                         </div>
                     </a>
                 </li>
@@ -165,7 +165,7 @@
                             <img src="assets/img/water/PS-WD421.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Top Loading Water Dispenser <br>PS-WD421</p>
+                            <p>PS-WD421</p>
                         </div>
                     </a>
                 </li>
@@ -176,7 +176,7 @@
                             <img src="assets/img/water/PS-WD839.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Top Loading Water Dispenser <br>PS-WD839</p>
+                            <p>PS-WD839</p>
                         </div>
                     </a>
                 </li>
@@ -187,7 +187,7 @@
                             <img src="assets/img/water/FW-WD419.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Top Loading Water Dispenser with Cabinet Storage <br>FW-WD419</p>
+                            <p>FW-WD419</p>
                         </div>
                     </a>
                 </li>
@@ -198,7 +198,7 @@
                             <img src="assets/img/water/FW-WD219.png">
                         </div>
                         <div class="catalog__item-description">
-                            <p>Top Loading Water Dispenser <br>FW-WD219</p>
+                            <p>FW-WD219</p>
                         </div>
                     </a>
                 </li>
@@ -234,9 +234,7 @@
             </li>
         </ul>
         <div class="footer__copyright">
-            <p>Copyright © 2024 Farberware Cookware.</p>
-            <p>*Voted most trusted Cookware brand by American shoppers based on the 2022 BrandSpark® American Trust
-                Study.</p>
+
         </div>
         <ul class="footer__socials">
             <li class="footer__socials-item">
