--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 <!--    </div>-->
 
     <div class="video">
-        <video class="banner-video" controls loop autoplay playsinline style="object-position: center;">
+        <video class="banner-video" controls loop autoplay muted playsinline style="object-position: center;">
             <source src="assets/video/0311.mp4" type="video/mp4">
         </video>
     </div>
@@ -234,8 +234,10 @@
 </footer>
 
 
+
 <script src="js/menu.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="js/swiper.js"></script>
+
 </body>
 </html>
